package com.fanstudy.designmode.template;

public class BlackBeanSoyaMilk extends SoyaMilk{
    @Override
    void addCondiments() {
        System.out.println("加入上好 的黑豆");
    }
}
